// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App App 1`] = `
<root
  data-is="app"
>
  <div
    id="app"
  >
     
    <img
      src="./logo.png"
    />
     
    <h1 />
     
    <h2>
      Essential Links
    </h2>
     
    <ul>
       
      <li>
        <a
          href="https://riot.js.org/"
          target="_blank"
        >
          riot.js Docs
        </a>
      </li>
       
      <li>
        <a
          href="https://riot.js.org/made-with-riot/"
          target="_blank"
        >
          Showcase
        </a>
      </li>
       
      <li>
        <a
          href="https://riot.js.org/download/"
          target="_blank"
        >
          Download now
        </a>
      </li>
       
    </ul>
     
    <h2>
      Ecosystem
    </h2>
     
    <ul>
       
      <li>
        <a
          href="https://riotgear.js.org/"
          target="_blank"
        >
          riot gear
        </a>
      </li>
       
      <li>
        <a
          href="https://riotgear2.github.io/"
          target="_blank"
        >
          riot gear 2
        </a>
      </li>
       
      <li>
        <a
          href="https://kysonic.github.io/riot-mui/"
          target="_blank"
        >
          riot material UI
        </a>
      </li>
       
      <li>
        <a
          href="https://devhints.io/riot"
          target="_blank"
        >
          riot cheatsheet
        </a>
      </li>
       
    </ul>
     
  </div>
</root>
`;

exports[`Storyshots Button rounded 1`] = `
<root>
  <my-button
    rounded="true"
  >
    <button
      class="rounded button"
      style="color: #42b983; border-color: #42b983"
    >
      A Button with rounded edges!
    </button>
  </my-button>
</root>
`;

exports[`Storyshots Button square 1`] = `
<root>
  <my-button>
    <button
      class="button"
      style="color: #42b983; border-color: #42b983"
    >
      A Button with square edges!
    </button>
  </my-button>
</root>
`;

exports[`Storyshots Welcome Welcome 1`] = `
<root
  data-is="welcome"
>
  <div
    class="main"
  >
     
    <h1>
      Welcome to Storybook for riot.js
    </h1>
     
    <p>
       This is a UI component dev environment for your riot app. 
    </p>
     
    <p>
       We've added some basic stories inside the 
      <code
        class="code"
      >
        src/stories
      </code>
       directory. 
      <br />
       A story is a single state of one or more UI components. You can have as many stories as you want. 
      <br />
       (Basically a story is like a visual test case.) 
    </p>
     
    <p>
       See these sample 
      <a
        class="link"
      >
        stories
      </a>
       for a component called 
      <code
        class="code"
      >
        Button
      </code>
       . 
    </p>
     
    <p
      style="text-align:center"
    >
      <img
        src="../logo.png"
      />
    </p>
     
    <p>
       Just like that, you can add your own components as stories. 
      <br />
       You can also edit those components and see changes right away. 
      <br />
       (Try editing the 
      <code
        class="code"
      >
        Button
      </code>
       component located at 
      <code
        class="code"
      >
        src/stories/Button.tag
      </code>
      .) 
    </p>
     
    <p>
       Usually we create stories with smaller UI components in the app.
      <br />
       Have a look at the 
      <a
        class="link"
        href="https://storybook.js.org/basics/writing-stories"
        target="_blank"
      >
         Writing Stories 
      </a>
       section in our documentation. 
    </p>
     
    <p
      class="note"
    >
       
      <b>
        NOTE:
      </b>
       
      <br />
       Have a look at the 
      <code
        class="code"
      >
        .storybook/webpack.config.js
      </code>
       to add webpack loaders and plugins you are using in this project. 
    </p>
     
  </div>
</root>
`;
